test_suite/tests/ui/inject_constructor/invalid_types.stderr
error[E0308]: mismatched types
 --> tests/ui/inject_constructor/invalid_types.rs:3:10
  |
3 | #[derive(Inject)]
  |          ^^^^^^ expected `i32`, found struct `String`
  |
  = note: this error originates in the derive macro `Inject` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/ui/inject_constructor/invalid_types.rs:3:10
  |
3 | #[derive(Inject)]
  |          ^^^^^^- help: try using a conversion method: `.to_string()`
  |          |
  |          expected struct `String`, found `i32`
  |
  = note: this error originates in the derive macro `Inject` (in Nightly builds, run with -Z macro-backtrace for more info)
